Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-132277

Qt fails to adhere to HTTP/2 HPACK dynamic table size changes

XMLWordPrintable

    • All
    • 6e7a15f5c (dev), b91edac40 (6.9), 5e84d211d (6.8), be477819a (dev), f7c3acd27 (dev), 2101e9146 (6.9), 57f44d6d8 (dev), 55dc2af21 (6.9), 9a1edf52d (6.9), 42a62db6f (6.8), fc4bb856d (6.8), a428e8956 (6.8), 5d42d3b4e (6.8), b6cf44633 (tqtc/lts-6.5)
    • Foundation Sprint 122, Foundation Sprint 123

      Issue experienced during a rollout from Google's GLB (Global Load Balancer) where QNetworkRequests were immediately dropped with GOAWAY and log message indicating  "Server is unable to maintain the header compression context for the connection".

      This is a client error resulting in the server side dropping the connection immediately as per https://httpwg.org/specs/rfc7540.html#HeaderBlock. If the server side had a failure in the header, Qt would emit a critical message "HPACK decompression failed"

        For Gerrit Dashboard: QTBUG-132277
        # Subject Branch Project Status CR V

            manordheim MÄrten Nordheim
            henrik.hartz Henrik Hartz
            Vladimir Minenko Vladimir Minenko
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: