src/network/access/http2/hpack_p.h
@@ -39,6 +39,8 @@ public:
     Encoder(quint32 maxTableSize, bool compressStrings);
 
     quint32 dynamicTableSize() const;
+    quint32 dynamicTableCapacity() const;
+    quint32 maxDynamicTableCapacity() const;
 
     bool encodeRequest(class BitOStream &outputStream,
                        const HttpHeader &header);
@@ -94,6 +96,8 @@ public:
     }
 
     quint32 dynamicTableSize() const;
+    quint32 dynamicTableCapacity() const;
+    quint32 maxDynamicTableCapacity() const;
 
     void setMaxDynamicTableSize(quint32 size);
 
